Fix overflowing text snippets for support messages

--- a/customize.dist/src/less2/include/support.less
+++ b/customize.dist/src/less2/include/support.less
@@ -33,7 +33,8 @@
         }
         textarea {
             box-sizing: border-box;
-            width: 2*@sidebar_block-width !important;
+            resize: vertical;
+            width: 100%;
             max-width: 100% !important;
             padding: 10px 15px;
             height: 300px;
