--- a/www/moderation/app-moderation.less
+++ b/www/moderation/app-moderation.less
@@ -109,6 +109,24 @@
             }
         }
     }
+    [data-item="open-ticket"] {
+        .cp-support-form-container {
+            textarea {
+                width: 2*@sidebar_block-width !important;
+            }
+        }
+    }
+
+    .cp-support-recorded {
+        .cp-dropdown-container > button {
+            margin-left: @sidebar_base-margin !important;
+            margin-right: 0 !important;
+        }
+        .cp-fake-dropdown {
+            margin-left: @sidebar_base-margin !important;
+            margin-right: 0 !important;
+        }
+    }
 
     .cp-support-search-container {
         display: flex;
